# commandcode2api

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  flake.nix  models.json
docs/: ANTHROPIC_API.md
docs/plans/: anthropic-api-support.md
scripts/: extract-models.js
src/: convert.rs  lib.rs  main.rs  proxy.rs  types.rs
src/translate_api/: anthropic_to_openai.rs  mod.rs  openai_to_anthropic.rs
tests/: round_trip_a2o.rs  round_trip_o2a.rs  stream_usage_test.rs  translate_api_test.rs
